# sirius23-mk-examles

./: Makefile  dune
WGC/: WGC.ml  dune
family/: dune  family.ml  family.t
nat/: dune  nat.ml  nat.t
noCanren/: WGC.ml2mk.ml  WGC.t  WGC_run.ml  bottles_run.ml  bridge.t  bridge_run.ml  car_wheels.ml2mk.ml  dune  einstein.ml2mk.ml  einstein.t  einstein_run.ml  hanoi.ml2mk.ml  hanoi.t  hanoi_run.ml  hm_inferencer.ml2mk.ml  hm_inferencer_run.ml  lorry.ml2mk.ml  lorry_run.ml  scheme_interpreter.t  sudoku4x4_run.ml  unify.ml2mk.ml  unify.t  unify_run.ml
