(executable
 (name WGC)
 (modules WGC)
 (libraries OCanren)
 (flags
  (:standard -rectypes -w -8-32-34))
 (preprocessor_deps %{project_root}/pp5+gt+plugins+ocanren+logger+dump.exe)
 (preprocess
  (pps
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   GT.ppx_all
   OCanren-ppx.ppx_deriving_reify
   --
   -new-typenames
   -pp
   ./pp5+gt+plugins+ocanren+logger+dump.exe)))
